chore: fix sidebar width on mobiles

--- a/pages/views/styles/sidebar.less
+++ b/pages/views/styles/sidebar.less
@@ -22,7 +22,7 @@
   }
 
   .sidebar-nav {
-    width: 100vw;
+    width: 20rem;
     height: 100%;
     padding: 20px 0;
   }
